--- a/testPage.html
+++ b/testPage.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p> I'm hosted with GitHub Pages.</p>
-<p> <a = href="testPage.html"> Link to second tab.</a></p>
+<p> <a = href="http://www.google.com"> Link to google.</a></p>
 </body>
 </html>
