--- a/index.html
+++ b/index.html
@@ -1,8 +1,70 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="mystyle.css">
+    <style>
+        
+       /* ul {   list-style-type: none;   padding: 0;   margin: 0; }
+        li { display: inline-block}
+        .SIDEBAR {
+            list-style-type: none;
+            top: 0;
+            left: 0;
+            padding: 0;
+            margin: 0;
+            position: fixed;
+            height: 100vh;
+            width: 200px;
+            background-color: grey;
+
+        }
+        .LINKS {
+            display: block; 
+            padding: 10px;
+            color: blue;
+            text-align: center;
+
+        }
+
+        i a {     display: block;     padding: 10px;     color: blue; text-align: center;   }
+        li a:hover {color: green} */
+
+    </style>    
+    </head>
 <body>
-<h1>Hello World</h1>
+<!-- <h1>Hello World</h1> -->
+<!-- <nav>
+    <ul class="SIDEBAR">
+        <li style="border-bottom: 1px black solid;"><a class="LINKS" href="">Home</a></li>
+        <li style="border-bottom: 1px black solid;"><a class="LINKS" href="">Research</a></li>
+        <li style=""><a href="">Tutoring</a></li>
+     <li style="display: inline-block;padding: 10px; color: blue;"><a href="">Contact</a></li>
+    </ul>
+</nav> -->
+<div id="mySidenav" class="sidenav">
+    <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
+    <a href = "">About</a>
+    <a href = "">Research</a>
+    <a href = "">Tutoring</a>
+    <a href = "">Hobbies</a>
+</div>
+<span onclick="openNav()">test</span>
+<div id="main">
+    <h1>Jeff Berning</h1>
 <p> I'm hosted with GitHub Pages.</p>
 <p> <a = href="testPage.html"> Link to second tab.</a></p>
+</div>
+<script>
+    function openNav() {
+        document.getElementById("mySidenav").style.width = "250px";
+        document.getElementById("main").style.marginLeft = "250px";
+    }
+    
+    function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+        document.getElementById("main").style.marginLeft = "0";
+    }
+</script>
 </body>
 </html>
