--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </nav> -->
 <div id="mySidenav" class="sidenav">
     <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
-    <a href = "">About</a>
+    <a href = "about.html">About</a>
     <a href = "">Research</a>
     <a href = "">Tutoring</a>
     <a href = "">Hobbies</a>
