--- a/about.html
+++ b/about.html
@@ -10,15 +10,24 @@
 <body>
 <div id="mySidenav" class="sidenav">
     <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
+    <a href = "index.html">Home</a>
     <a href = "about.html">About</a>
     <a href = "">Research</a>
     <a href = "">Tutoring</a>
     <a href = "">Hobbies</a>
 </div>
 <div id="main">
-    <h1>About me</h1>
+    <h1>Short Biography</h1>
     <img src="/Images/jeff_and_renee.jpg" alt="Picture of Jeff and Renee in a field." style="width:750px;height:500px">
-<p> I'm hosted with GitHub Pages.</p>
+<p class="mainText"> <img src="/Images/jeff_and_renee.jpg" alt="Picture of Jeff and Renee in a field." style="float:right;width:750px;height:500px">I was born and raised in Lenexa, KS, just outside of Kansas City. I attended high school at St. James Academy, where my senior year I began dating my future fiancee, Renee.
+    After high school, I traveled to South Bend, Indiana to pursue my degree in Mechanical Engineering at the University of Notre Dame. 
+    At Notre Dame, I began undergraduate research examining the use of optimization tools for enhanced human-robot interaction, specifically for rehabilitation following spinal cord injuries. 
+    Impacting the world in this way brought great joy and peace, and I decided to continue academic research in the area of rehabilitative robotics after earning my BSME degree from Notre Dame.
+</p>
+<p class="mainText">
+    I joined the Rice Computational Neuromechanics Lab (RCNL) and Mechatronic and Haptic Interface Lab (MAHI) at Rice University in August 2020. 
+    With my work in these labs, I am gaining deeper knowledge in robotics, controls, biomechanics, and optimization while also continuing to research rehabilitative robotics.
+</p>
 <p> <a = href="testPage.html"> Link to second tab.</a></p>
 </div>
 <script>
