--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 </nav> -->
 <div id="mySidenav" class="sidenav">
     <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
+    <a href = "index.html">Home</a>
     <a href = "about.html">About</a>
     <a href = "">Research</a>
     <a href = "">Tutoring</a>
