Fixing Previous Small Error

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <h1>Short Biography</h1>
 <p class="mainText"> 
     <!-- <img id = "engagement" src="/Images/jeff_and_renee.jpg" alt="Picture of Jeff and Renee in a field." style="float:right;width:750px;height:500px"> -->
-    <img id="engagement" src="/Images/jeff_and_renee.jpg" alt="Picture of Jeff and Renee."
+    <img id="engagement" src="/Images/jeff_and_renee.jpg" alt="Picture of Jeff and Renee.">
     I was born and raised in Lenexa, KS, just outside of Kansas City. I attended high school at St. James Academy, where my senior year I began dating my future fiancee, Renee.
     After high school, I traveled to South Bend, Indiana to pursue my degree in Mechanical Engineering at the University of Notre Dame. 
     At Notre Dame, I began undergraduate research examining the use of optimization tools for enhanced human-robot interaction, specifically for rehabilitation following spinal cord injuries. 
