--- a/about.html
+++ b/about.html
@@ -12,14 +12,14 @@
     <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
     <a href = "index.html">Home</a>
     <a href = "about.html">About</a>
-    <a href = "">Research</a>
-    <a href = "">Tutoring</a>
+    <a href = "research.html">Research</a>
+    <a href = "tutoring.html">Tutoring</a>
     <a href = "">Hobbies</a>
 </div>
 <div id="main">
     <h1>Short Biography</h1>
-<p class="mainText"> 
-    <!-- <img id = "engagement" src="/Images/jeff_and_renee.jpg" alt="Picture of Jeff and Renee in a field." style="float:right;width:750px;height:500px"> -->
+<p class="mainText">UNDER CONSTRUCTION</p>
+<!-- <p class="mainText"> 
     <img src="/Images/jeff_and_renee.jpg" alt="Picture of Jeff and Renee." style="padding-left:10px;height:500px;width: 750px; float:right">
     I was born and raised in Lenexa, KS, just outside of Kansas City. I attended high school at St. James Academy, where my senior year I began dating my future fiancee, Renee.
     After high school, I traveled to South Bend, Indiana to pursue my degree in Mechanical Engineering at the University of Notre Dame. 
@@ -29,8 +29,7 @@
 <p class="mainText">
     I joined the Rice Computational Neuromechanics Lab (RCNL) and Mechatronic and Haptic Interface Lab (MAHI) at Rice University in August 2020. 
     With my work in these labs, I am gaining deeper knowledge in robotics, controls, biomechanics, and optimization while also continuing to research rehabilitative robotics.
-</p>
-<p> <a = href="testPage.html"> Link to second tab.</a></p>
+</p> -->
 </div>
 <script>
 </script>
