--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
     <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
     <a href = "index.html">Home</a>
     <a href = "about.html">About</a>
-    <a href = "">Research</a>
-    <a href = "">Tutoring</a>
+    <a href = "research.html">Research</a>
+    <a href = "tutoring.html">Tutoring</a>
     <a href = "">Hobbies</a>
 </div>
 <span onclick="openNav()">test</span>
 <div id="main">
     <h1>Jeff Berning</h1>
-<p> I'm hosted with GitHub Pages.</p>
+<p> Under Construction.</p>
 <p> <a = href="testPage.html"> Link to second tab.</a></p>
 </div>
 <script>
